...
      >
        <ThemedView className="flex-1 items-center justify-center gap-6 px-6">
          <AnimatedIcon />
          <ThemedText
            accessibilityRole="header"
            className="text-center"
            testID="home-title"
            type="title"
          >
            Welcome to&nbsp;Expo
          </ThemedText>
        </ThemedView>

...
